# ProjectJobSearch

./: .env_template  .flake8  README.md  main.py  pyproject.toml  requirements.txt
covered_test/: index.html
src/: user_interactive.py
src/classes/: cls_db_manager.py  cls_file_handler.py  cls_hh.py  cls_vacancy.py
tests/: conftest.py  test_user_interactive.py
tests/classes_test/: test_cls_file_handler.py  test_cls_hh.py  test_cls_vacancy.py
